Integarting own AI